# lanmessengerforandroid

./: CMakeLists.txt  CMakeLists.txt.old  android-lmcapp-deployment-settings-armv8a.json  android.toolchain.cmake  build_apks-multiarch.sh  build_apks.sh  build_it.sh  build_it_works.sh  changelog.md  interactive_compiler.txt  prompted_compiler.txt
lmc/: CMakeLists.txt
lmc/src/: aboutdialog.cpp  aboutdialog.h  ar_SA.ts  bg_BG.ts  broadcastwindow.cpp  chathelper.cpp  chatroomwindow.cpp  chatroomwindow.h  chatwindow.cpp  chatwindow.h  crypto.cpp  crypto.h  datagram.cpp  de_DE.ts  en_US.ts  es_ES.ts  filemessagingproc.cpp  filemodelview.cpp  filemodelview.h  fr_FR.ts  helpwindow.cpp  history.cpp  historywindow.cpp  historywindow.h  imagepicker.cpp  imagepickeraction.cpp  it_IT.ts  ja_JP.ts  ko_KR.ts  lmc.cpp  lmc.h  lmc.pro  lmc_strings.cpp  mainwindow.cpp  mainwindow.h  message.cpp  messagelog.cpp  messaging.cpp  messaging.h  messagingproc.cpp  (+26 more)
lmcapp/: CMakeLists.txt
lmcapp/include/: application.h
lmcapp/src/: application.cpp  dialog.cpp  qtlocalpeer.cpp  qtlocalpeer.h  qtsingleapplication.cpp  qtsingleapplication.h
openssl-libs/armv7/include/openssl/: configuration.h
openssl-libs/armv8/include/openssl/: configuration.h
openssl-libs/x86/include/openssl/: configuration.h
openssl-libs/x86_64/include/openssl/: configuration.h
